--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,11 +15,15 @@
     "@types/node": "^16.18.89",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/recharts": "^1.8.29",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "recharts": "^2.12.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
