--- a/front-end/package.json
+++ b/front-end/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/dm-sans": "^5.0.21",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@phosphor-icons/react": "^2.0.15",
