--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/dm-sans": "^5.0.21",
     "@mui/icons-material": "^5.15.13",
-    "@mui/material": "^5.15.13",
+    "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.2.0",
     "@phosphor-icons/react": "^2.0.15",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
