--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "@types/recharts": "^1.8.29",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
