--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,13 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/mongoose-auto-increment": "^5.0.38",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "ts-node-dev": "^2.0.0"
   }
